# READI

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  testing.yml
notebooks/: example-structured-data-classification.ipynb  example-unstructured-data-classification.ipynb
src/risk_assessment/classification/: __init__.py  classification_strategy.py
src/risk_assessment/classification/identifiers/: __init__.py  accounts_office_reference_number.py  age.py  american_bankers_association.py  au_medicare_number.py  australian_business_number.py  bank_account.py  credit_card.py  credit_card_type.py  date.py  email.py  french_postal_code.py  geography.py  hmrc_payee.py  iban.py  imei.py  international_zipcode.py  japan_address.py  license.py  national_identifier.py  network.py  person.py  phone.py  publications.py  recommended_list.py  swift.py  time.py  us_postal_address.py  us_voter_id.py  user_id.py  vehicle.py
src/risk_assessment/classification/identifiers/data/: LatinFirstName.dict  LatinLastName.dict  all_day_of_week_names.txt  female_first_names.csv  first_names.csv  job-titles.csv  male_first_names.csv  surnames.csv
src/risk_assessment/classification/identifiers/data/common/: swiftcodes.csv  uri-schemes-1.csv
src/risk_assessment/classification/identifiers/data/en/: animals.csv  countryList.csv  credit_card_types.csv  dependent.csv  occupations.csv  phoneCountryCallingCodes.csv  races.csv  states_us.csv  street_types.csv  vinWMI.csv
src/risk_assessment/classification/identifiers/data/gr/: continents.csv  countryList.csv  hospital_names.csv  last_names.csv  male_names.csv  marital_status.csv  medicines.csv  occupations.csv  races.csv  religions.csv
src/risk_assessment/classification/identifiers/data/ja/: female_firstname.csv  male_firstname.csv  surnames.csv
src/risk_assessment/classification/identifiers/data/uk/: ssnuk_prefixes.csv
src/risk_assessment/classification/identifiers/data/us/: STREET_NAMES.csv  counties.csv  female_names.csv  hospital_names.csv  male_names.csv
src/risk_assessment/classification/identifiers/driving_license/: __init__.py  japan.py
src/risk_assessment/classification/identifiers/healthcare/: __init__.py  atc.py  dea_number.py  gene.py  healthcare_plan_beneficiary.py  icd.py  medical_record_number.py  medicare_beneficiary_identifier.py  ndc.py
src/risk_assessment/classification/identifiers/healthcare/data/: genes_list.csv
src/risk_assessment/classification/identifiers/healthcare/data/en/: ICDv11.csv  medicines.csv
src/risk_assessment/classification/identifiers/iban_country/: __init__.py
src/risk_assessment/classification/unstructured/: __init__.py  aggregator.py  drl.py  flair_ner.py  hf.py  nltk.py  pos_utility.py  presidio.py  presidio_wrapper.py  spacy.py  spacy_pos.py  stanza_ner.py  utility.py
src/risk_assessment/readi/: analyzer.py  defaults_phi.py  defaults_pii.py  defaults_pii_no_model.py  external_tokenizers.py  sentence_tokenizer.py  text_tokenizer.py
src/risk_assessment/utility/: __init__.py
tests/: conftest.py
tests/classification/identifiers/: test_ATC.py  test_IBAN.py  test_ICD.py  test_IMEI.py  test_MedicalTerm.py  test_NDC.py  test_accounts_office_reference_number.py  test_address_japan.py  test_age.py  test_american_bankers_association.py  test_au_medicare_number.py  test_australian_business_number.py  test_bank_account.py  test_cfp_brazil.py  test_credit_card.py  test_credit_card_type.py  test_dea_number.py  test_dictionary.py  test_driving_license.py  test_email.py  test_france_nir.py  test_french_postal_code.py  test_gene.py  test_geography.py  test_germany_tin.py  test_healthcare_plan_benificiary.py  test_indian_aadhaar.py  test_indonesian_icd.py  test_international_zipcode.py  test_ip.py  test_italian_fiscal_code.py  test_language_based_dictionary.py  test_license.py  test_lunh_checksum.py  test_mbi.py  test_mrn.py  test_my_number_japan.py  test_national_id.py  test_person.py  test_pesel_poland.py  (+19 more)
tests/classification/identifiers/data/: health_plan_beneficiary_number.json  mrn.json  phone_numbers.txt  unique_id.json  vin_list.json
tests/classification/unstructured/: test_aggregator.py  test_bert.py  test_deberta_pii.py  test_drl.py  test_freetext_pipeline.py  test_nltk.py  test_overlapping.py  test_spacy.py  test_stanza_ner.py  test_utility.py
tests/risk/: test_federate_risk.py
tests/utility/: test_histograms.py  test_js_divergence.py  test_kl_divergence.py  test_statistics.py
