[project]
name = "readi-privacy"
dynamic = ["version"]
description = "A collection of funcionality to perform data classification, data privacy risk assessment, and enforce mitigation"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  {name = "Stefano Braghin", email = "stefanob@ie.ibm.com"},
  {name = "Liubov Nedoshivina", email = "liubov.nedoshivina@ibm.com"},
  {name = "Anisa Halimi", email = "anisa.halimi@ibm.com"},
  {name = "Naoise Holohan", email = "naoise.holohan@ibm.com"},
  {name = "Kieran Fraser", email = "kieran.fraser@ibm.com"},
]
license = "Apache-2.0"
classifiers = [
  "Development Status :: 4 - Beta",
  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "datasets==4.8.5",
    "fastparquet==2024.5.0",
    "flair>=0.15.1",
    "google-re2==1.1.20251105",
    "huggingface-hub>=0.34.0,<1.0",
    "mecab-python3==1.0.9",
    "nltk==3.9.4",
    "opt_einsum==3.3.0",
    "pandas==3.0.2",
    "pip>=26.0.0",
    "pyarrow==24.0.0",
    "pytz==2024.1",
    "safetensors==0.4.4",
    "scipy==1.13.1",
    "spacy==3.8.7",
    "SPARQLWrapper==2.0.0",
    "stanza==1.10.1",
    "tika==2.6.0",
    "torch~=2.6.0",
    "transformers==4.57.6",
    "unidic-lite==1.0.8",
    "urllib3==2.7.0",
    "word2number==1.1",
]
[project.optional-dependencies]
rest = [
  "fastapi==0.136.1",
  "python-dotenv==1.2.2",
]
dev = [
  "bandit",
  "faker==13.3.1",
  # "git+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
  # "git+https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl",
  # "git+https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.7.0/ja_core_news_sm-3.7.0-py3-none-any.whl",
  # "git+https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.7.0/xx_ent_wiki_sm-3.7.0-py3-none-any.whl",
  "httpx==0.27.2",
  "pylint==4.0.4",
  "notebook==7.2.2",
  "pytest-faker",
  "pytest-mock",
  "ruff==0.8.4",
  "pytest-asyncio==1.3.0",
  "ty==0.0.34",
]

[project.urls]
Repository = "https://github.com/IBM/READI.git"
Issues = "https://github.com/IBM/READI/issues"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/risk_assessment"
]
artifacts = [
  "src/risk_assessment/classification/identifiers/data/*.csv",
  "src/risk_assessment/classification/identifiers/data/*.dict",
  "src/risk_assessment/classification/identifiers/data/*.txt",
  "src/risk_assessment/classification/identifiers/data/french_zipcodes",
  "src/risk_assessment/classification/identifiers/data/common/*.csv",
  "src/risk_assessment/classification/identifiers/data/common/*.dat",
  "src/risk_assessment/classification/identifiers/data/common/*.txt",
  "src/risk_assessment/classification/identifiers/data/en/*.csv",
  "src/risk_assessment/classification/identifiers/data/gr/*.csv",
  "src/risk_assessment/classification/identifiers/data/it/*.csv",
  "src/risk_assessment/classification/identifiers/data/it/*.txt",
  "src/risk_assessment/classification/identifiers/data/ja/*.csv",
  "src/risk_assessment/classification/identifiers/data/uk/*.csv",
  "src/risk_assessment/classification/identifiers/data/us/*.csv",
  "src/risk_assessment/classification/identifiers/healthcare/data/*.csv",
  "src/risk_assessment/classification/identifiers/healthcare/data/en/*.csv",
  "src/risk_assessment/classification/identifiers/healthcare/data/en/*.parquet",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
pattern = "default-unprefixed"
fallback-version = "0.0.0"
tagged-metadata = true
dirty = true
bump = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["B", "F401", "F811"]  # allow unused imports and redefinitions in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true }}
]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ty.src]
include = ["src", "tests"]
exclude = [".pre-commit-config.yaml"]
